infra/kubernetes/nginx-example/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-example
spec:
  selector:
    app: nginx-example
  ports:
    - port: 80
